EXTRA_DIST = \
	20000113-1.c \
	20000121-1.c \
	20000205-1.c \
	20000217-1.c \
	20000223-1.c \
	20000224-1.c \
	20000225-1.c \
	20000227-1.c \
	20000313-1.c \
	20000314-1.c \
	20000314-2.c \
	20000314-3.c \
	20000403-1.c \
	20000412-1.c \
	20000412-2.c \
	20000412-3.c \
	20000412-4.c \
	20000412-5.c \
	20000412-6.c \
	20000419-1.c \
	20000422-1.c \
	20000503-1.c \
	20000511-1.c \
	20000519-2.c \
	20000523-1.c \
	20000528-1.c \
	20000603-1.c \
	20000605-1.c \
	20000605-2.c \
	20000605-3.c \
	20000622-1.c \
	20000703-1.c \
	20000706-1.c \
	20000706-2.c \
	20000706-3.c \
	20000706-4.c \
	20000706-5.c \
	20000707-1.c \
	20000715-1.c \
	20000715-2.c \
	20000717-1.c \
	20000717-2.c \
	20000717-3.c \
	20000717-4.c \
	20000717-5.c \
	20000722-1.c \
	20000726-1.c \
	20000731-1.c \
	20000731-2.c \
	20000801-1.c \
	20000801-2.c \
	20000801-3.c \
	20000801-4.c \
	20000808-1.c \
	20000815-1.c \
	20000819-1.c \
	20000822-1.c \
	20000914-1.c \
	20000917-1.c \
	20001009-1.c \
	20001009-2.c \
	20001011-1.c \
	20001013-1.c \
	20001017-1.c \
	20001017-2.c \
	20001024-1.c \
	20001026-1.c \
	20001027-1.c \
	20001031-1.c \
	20001101.c \
	20001108-1.c \
	20001111-1.c \
	20001112-1.c \
	20001121-1.c \
	20001124-1.c \
	20001130-1.c \
	20001130-2.c \
	20001203-1.c \
	20001203-2.c \
	20001221-1.c \
	20001228-1.c \
	20010106-1.c \
	20010114-1.c \
	20010116-1.c \
	20010118-1.c \
	20010122-1.c \
	20010123-1.c \
	20010129-1.c \
	20010206-1.c \
	20010209-1.c \
	20010221-1.c \
	20010222-1.c \
	20010224-1.c \
	20010325-1.c \
	20010403-1.c \
	20010409-1.c \
	20010422-1.c \
	20010518-1.c \
	20010518-2.c \
	20010520-1.c \
	20010605-1.c \
	20010711-1.c \
	20010717-1.c \
	20010723-1.c \
	20010904-1.c \
	20010904-2.c \
	20010910-1.c \
	20010915-1.c \
	20010924-1.c \
	20010925-1.c \
	20011019-1.c \
	20011024-1.c \
	20011109-1.c \
	20011109-2.c \
	20011113-1.c \
	20011114-1.c \
	20011121-1.c \
	20011126-1.c \
	20011126-2.c \
	20011128-1.c \
	20011217-1.c \
	20011219-1.c \
	20011223-1.c \
	20020103-1.c \
	20020107-1.c \
	20020118-1.c \
	20020127-1.c \
	20020129-1.c \
	20020201-1.c \
	20020206-1.c \
	20020206-2.c \
	20020213-1.c \
	20020215-1.c \
	20020216-1.c \
	20020219-1.c \
	20020225-1.c \
	20020225-2.c \
	20020227-1.c \
	20020307-1.c \
	20020314-1.c \
	20020320-1.c \
	20020321-1.c \
	20020328-1.c \
	20020402-1.c \
	20020402-2.c \
	20020402-3.c \
	20020404-1.c \
	20020406-1.c \
	20020413-1.c \
	20020418-1.c \
	20020423-1.c \
	20020503-1.c \
	20020529-1.c \
	20020611-1.c \
	20020615-1.c \
	20020716-1.c \
	20020805-1.c \
	20020810-1.c \
	20020819-1.c \
	20020904-1.c \
	20020911-1.c \
	20020916-1.c \
	20020920-1.c \
	20021011-1.c \
	20021015-1.c \
	20021024-1.c \
	20021111-1.c \
	20021113-1.c \
	20021118-1.c \
	20021118-2.c \
	20021118-3.c \
	20021119-1.c \
	20021120-1.c \
	20021120-2.c \
	20021127-1.c \
	20021204-1.c \
	20021219-1.c \
	20030105-1.c \
	20030109-1.c \
	20030117-1.c \
	20030120-1.c \
	20030120-2.c \
	20030128-1.c \
	20030203-1.c \
	20030218-1.c \
	20030221-1.c \
	20030224-2.c \
	20030307-1.c \
	20030313-1.c \
	20030316-1.c \
	20030323-1.c \
	20030330-1.c \
	20030401-1.c \
	20030404-1.c \
	20030501-1.c \
	20030606-1.c \
	20030613-1.c \
	20030626-1.c \
	20030626-2.c \
	20030714-1.c \
	20030715-1.c \
	20030717-1.c \
	20030718-1.c \
	20030811-1.c \
	20030821-1.c \
	20030828-1.c \
	20030828-2.c \
	20030903-1.c \
	20030909-1.c \
	20030913-1.c \
	20030914-1.c \
	20030914-2.c \
	20030920-1.c \
	20031010-1.c \
	20031011-1.c \
	20031201-1.c \
	20031211-1.c \
	20031211-2.c \
	20031214-1.c \
	20031215-1.c \
	20031216-1.c \
	20040208-1.c \
	20040218-1.c \
	20040302-1.c \
	20040307-1.c \
	20040308-1.c \
	20040309-1.c \
	20040311-1.c \
	20040313-1.c \
	20040319-1.c \
	20040411-1.c \
	20040423-1.c \
	20040520-1.c \
	20040625-1.c \
	20040703-1.c \
	20040704-1.c \
	20040706-1.c \
	20040707-1.c \
	20040709-1.c \
	20040709-2.c \
	20040811-1.c \
	20040820-1.c \
	20040831-1.c \
	20040917-1.c \
	20041011-1.c \
	20041019-1.c \
	20041112-1.c \
	20041124-1.c \
	20041126-1.c \
	20041201-1.c \
	20041212-1.c \
	20041213-2.c \
	20041214-1.c \
	20041218-1.c \
	20041218-2.c \
	20050104-1.c \
	20050106-1.c \
	20050107-1.c \
	20050111-1.c \
	20050119-1.c \
	20050119-2.c \
	20050124-1.c \
	20050218-1.c \
	20050224-1.c \
	20050410-1.c \
	20050502-1.c \
	20050502-2.c \
	20050613-1.c \
	20050713-1.c \
	20050826-1.c \
	20050826-2.c \
	20050929-1.c \
	20051012-1.c \
	20051021-1.c \
	20051104-1.c \
	20051110-1.c \
	20051110-2.c \
	20051113-1.c \
	20051215-1.c \
	20060102-1.c \
	20060110-1.c \
	20060110-2.c \
	20060127-1.c \
	20060412-1.c \
	20060420-1.c \
	20060905-1.c \
	20060910-1.c \
	20060929-1.c \
	20060930-1.c \
	20060930-2.c \
	20061031-1.c \
	20061101-1.c \
	20061101-2.c \
	20061220-1.c \
	20070201-1.c \
	20070212-1.c \
	20070212-2.c \
	20070212-3.c \
	20070424-1.c \
	20070517-1.c \
	20070614-1.c \
	20070724-1.c \
	20070824-1.c \
	20070919-1.c \
	20071011-1.c \
	20071018-1.c \
	20071029-1.c \
	20071030-1.c \
	20071108-1.c \
	20071120-1.c \
	20071202-1.c \
	20071205-1.c \
	20071210-1.c \
	20071216-1.c \
	20071219-1.c \
	20071220-1.c \
	20071220-2.c \
	20080117-1.c \
	20080122-1.c \
	20080222-1.c \
	20080408-1.c \
	20080424-1.c \
	20080502-1.c \
	20080506-1.c \
	20080506-2.c \
	20080519-1.c \
	20080522-1.c \
	20080529-1.c \
	20080604-1.c \
	20080719-1.c \
	20080813-1.c \
	20081103-1.c \
	20081117-1.c \
	20081218-1.c \
	20090113-1.c \
	20090113-2.c \
	20090113-3.c \
	20090207-1.c \
	20090219-1.c \
	20090527-1.c \
	20090623-1.c \
	20090711-1.c \
	20090814-1.c \
	20091229-1.c \
	20100209-1.c \
	20100316-1.c \
	20100416-1.c \
	20100430-1.c \
	20100708-1.c \
	20100805-1.c \
	20100827-1.c \
	20101013-1.c \
	20101025-1.c \
	20110418-1.c \
	20111208-1.c \
	20111212-1.c \
	20111227-1.c \
	20120105-1.c \
	20120207-1.c \
	20120427-1.c \
	20120427-2.c \
	20120615-1.c \
	20120808-1.c \
	20120817-1.c \
	20120919-1.c \
	20121108-1.c \
	20131127-1.c \
	20140212-1.c \
	20140212-2.c \
	20140326-1.c \
	20140425-1.c \
	20140622-1.c \
	20140828-1.c \
	20141022-1.c \
	20141107-1.c \
	20141125-1.c \
	20150611-1.c \
	20170111-1.c \
	20170401-1.c \
	20170401-2.c \
	20170419-1.c \
	900409-1.c \
	920202-1.c \
	920302-1.c \
	920409-1.c \
	920411-1.c \
	920415-1.c \
	920428-1.c \
	920428-2.c \
	920429-1.c \
	920501-1.c \
	920501-2.c \
	920501-3.c \
	920501-4.c \
	920501-5.c \
	920506-1.c \
	920520-1.c \
	920603-1.c \
	920604-1.c \
	920612-1.c \
	920612-2.c \
	920618-1.c \
	920710-1.c \
	920711-1.c \
	920721-1.c \
	920721-2.c \
	920721-3.c \
	920721-4.c \
	920728-1.c \
	920731-1.c \
	920812-1.c \
	920829-1.c \
	920909-1.c \
	920922-1.c \
	920929-1.c \
	921006-1.c \
	921007-1.c \
	921013-1.c \
	921016-1.c \
	921017-1.c \
	921019-1.c \
	921019-2.c \
	921029-1.c \
	921104-1.c \
	921110-1.c \
	921112-1.c \
	921117-1.c \
	921123-1.c \
	921123-2.c \
	921124-1.c \
	921202-2.c \
	921207-1.c \
	921208-1.c \
	921218-1.c \
	921218-2.c \
	930111-1.c \
	930123-1.c \
	930126-1.c \
	930208-1.c \
	930429-1.c \
	930429-2.c \
	930513-2.c \
	930518-1.c \
	930526-1.c \
	930527-1.c \
	930529-1.c \
	930603-1.c \
	930603-2.c \
	930603-3.c \
	930608-1.c \
	930614-1.c \
	930614-2.c \
	930622-1.c \
	930622-2.c \
	930628-1.c \
	930702-1.c \
	930713-1.c \
	930718-1.c \
	930719-1.c \
	930725-1.c \
	930818-1.c \
	930916-1.c \
	930921-1.c \
	930929-1.c \
	930930-1.c \
	930930-2.c \
	931002-1.c \
	931004-11.c \
	931004-13.c \
	931004-1.c \
	931004-3.c \
	931004-5.c \
	931004-7.c \
	931004-9.c \
	931005-1.c \
	931009-1.c \
	931012-1.c \
	931017-1.c \
	931018-1.c \
	931102-1.c \
	931102-2.c \
	931110-1.c \
	931110-2.c \
	931208-1.c \
	931228-1.c \
	940115-1.c \
	940122-1.c \
	941014-1.c \
	941015-1.c \
	941021-1.c \
	941025-1.c \
	941031-1.c \
	941101-1.c \
	941110-1.c \
	941202-1.c \
	950322-1.c \
	950426-1.c \
	950426-2.c \
	950503-1.c \
	950511-1.c \
	950512-1.c \
	950605-1.c \
	950607-1.c \
	950607-2.c \
	950612-1.c \
	950621-1.c \
	950628-1.c \
	950704-1.c \
	950706-1.c \
	950710-1.c \
	950714-1.c \
	950809-1.c \
	950906-1.c \
	950915-1.c \
	950929-1.c \
	951003-1.c \
	951115-1.c \
	951204-1.c \
	960116-1.c \
	960117-1.c \
	960209-1.c \
	960215-1.c \
	960218-1.c \
	960219-1.c \
	960301-1.c \
	960302-1.c \
	960312-1.c \
	960317-1.c \
	960321-1.c \
	960326-1.c \
	960402-1.c \
	960416-1.c \
	960419-1.c \
	960419-2.c \
	960512-1.c \
	960513-1.c \
	960608-1.c \
	960801-1.c \
	960802-1.c \
	960909-1.c \
	961004-1.c \
	961017-1.c \
	961017-2.c \
	961026-1.c \
	961112-1.c \
	961122-1.c \
	961122-2.c \
	961125-1.c \
	961206-1.c \
	961213-1.c \
	961223-1.c \
	970214-1.c \
	970214-2.c \
	970217-1.c \
	970923-1.c \
	980223.c \
	980424-1.c \
	980505-1.c \
	980505-2.c \
	980506-1.c \
	980506-2.c \
	980506-3.c \
	980526-1.c \
	980526-2.c \
	980526-3.c \
	980602-1.c \
	980604-1.c \
	980612-1.c \
	980617-1.c \
	980618-1.c \
	980701-1.c \
	980929-1.c \
	981001-1.c \
	981019-1.c \
	981130-1.c \
	981206-1.c \
	990106-1.c \
	990106-2.c \
	990117-1.c \
	990127-1.c \
	990127-2.c \
	990128-1.c \
	990130-1.c \
	990211-1.c \
	990222-1.c \
	990324-1.c \
	990326-1.c \
	990404-1.c \
	990413-2.c \
	990524-1.c \
	990525-1.c \
	990525-2.c \
	990527-1.c \
	990531-1.c \
	990604-1.c \
	990804-1.c \
	990811-1.c \
	990827-1.c \
	990829-1.c \
	990923-1.c \
	991016-1.c \
	991019-1.c \
	991023-1.c \
	991030-1.c \
	991112-1.c \
	991118-1.c \
	991201-1.c \
	991202-1.c \
	991202-2.c \
	991202-3.c \
	991216-1.c \
	991216-4.c \
	991221-1.c \
	991227-1.c \
	alias-1.c \
	alias-2.c \
	alias-3.c \
	alias-4.c \
	align-1.c \
	align-2.c \
	align-3.c \
	align-nest.c \
	alloca-1.c \
	anon-1.c \
	arith-1.c \
	arith-rand.c \
	arith-rand-ll.c \
	bf64-1.c \
	bf-layout-1.c \
	bf-pack-1.c \
	bf-sign-1.c \
	bf-sign-2.c \
	bitfld-1.c \
	bitfld-2.c \
	bitfld-3.c \
	bitfld-4.c \
	bitfld-5.c \
	bswap-1.c \
	builtin-prefetch-1.c \
	builtin-prefetch-2.c \
	builtin-prefetch-3.c \
	builtin-prefetch-4.c \
	builtin-prefetch-5.c \
	built-in-setjmp.c \
	builtin-types-compatible-p.c \
	call-trap-1.c \
	cmpdi-1.c \
	cmpsi-1.c \
	cmpsi-2.c \
	compare-1.c \
	compare-2.c \
	complex-2.c \
	complex-3.c \
	complex-4.c \
	complex-5.c \
	complex-7.c \
	cvt-1.c \
	dbra-1.c \
	divcmp-1.c \
	divcmp-2.c \
	divcmp-3.c \
	divcmp-4.c \
	divcmp-5.c \
	divconst-1.c \
	divconst-2.c \
	divconst-3.c \
	divmod-1.c \
	eeprof-1.c \
	enum-1.c \
	enum-2.c \
	ffs-1.c \
	frame-address.c \
	func-ptr-1.c \
	ifcvt-onecmpl-abs-1.c \
	index-1.c \
	ipa-sra-1.c \
	ipa-sra-2.c \
	longlong.c \
	loop-10.c \
	loop-11.c \
	loop-12.c \
	loop-13.c \
	loop-14.c \
	loop-15.c \
	loop-1.c \
	loop-2.c \
	loop-2c.c \
	loop-2d.c \
	loop-2e.c \
	loop-4b.c \
	loop-4.c \
	loop-5.c \
	loop-6.c \
	loop-7.c \
	loop-8.c \
	loop-9.c \
	loop-ivopts-1.c \
	loop-ivopts-2.c \
	lto-tbaa-1.c \
	.#Makefile.am -> nic@linux-6qpr.3349:1510395933 \
	mayalias-1.c \
	mayalias-2.c \
	mayalias-3.c \
	medce-1.c \
	memset-4.c \
	mod-1.c \
	multdi-1.c \
	nestfunc-1.c \
	nestfunc-2.c \
	nestfunc-3.c \
	nestfunc-5.c \
	nestfunc-6.c \
	nestfunc-7.c \
	packed-1.c \
	packed-2.c \
	pending-4.c \
	postmod-1.c \
	pr15262-1.c \
	pr15262-2.c \
	pr15262.c \
	pr15296.c \
	pr16790-1.c \
	pr17078-1.c \
	pr17133.c \
	pr17252.c \
	pr17377.c \
	pr19005.c \
	pr19449.c \
	pr19515.c \
	pr19606.c \
	pr19687.c \
	pr19689.c \
	pr20100-1.c \
	pr20187-1.c \
	pr20466-1.c \
	pr20527-1.c \
	pr20601-1.c \
	pr21173.c \
	pr21331.c \
	pr21964-1.c \
	pr22061-1.c \
	pr22061-2.c \
	pr22061-3.c \
	pr22061-4.c \
	pr22098-1.c \
	pr22098-2.c \
	pr22098-3.c \
	pr22141-1.c \
	pr22141-2.c \
	pr22348.c \
	pr22429.c \
	pr22630.c \
	pr23324.c \
	pr23467.c \
	pr23604.c \
	pr23941.c \
	pr24135.c \
	pr24141.c \
	pr24142.c \
	pr24716.c \
	pr24851.c \
	pr25125.c \
	pr25737.c \
	pr27073.c \
	pr27260.c \
	pr27285.c \
	pr27364.c \
	pr27671-1.c \
	pr28289.c \
	pr28403.c \
	pr28778.c \
	pr28865.c \
	pr28982a.c \
	pr29006.c \
	pr29156.c \
	pr29695-1.c \
	pr29695-2.c \
	pr29797-1.c \
	pr29797-2.c \
	pr29798.c \
	pr30185.c \
	pr30778.c \
	pr31072.c \
	pr31136.c \
	pr31169.c \
	pr31448-2.c \
	pr31448.c \
	pr31605.c \
	pr32244-1.c \
	pr32500.c \
	pr33142.c \
	pr33382.c \
	pr33631.c \
	pr33669.c \
	pr33779-1.c \
	pr33779-2.c \
	pr33870-1.c \
	pr33870.c \
	pr33992.c \
	pr34070-1.c \
	pr34070-2.c \
	pr34099-2.c \
	pr34099.c \
	pr34130.c \
	pr34154.c \
	pr34176.c \
	pr34415.c \
	pr34768-1.c \
	pr34768-2.c \
	pr34971.c \
	pr34982.c \
	pr35231.c \
	pr35390.c \
	pr35456.c \
	pr35472.c \
	pr35800.c \
	pr36034-1.c \
	pr36034-2.c \
	pr36038.c \
	pr36077.c \
	pr36093.c \
	pr36339.c \
	pr36343.c \
	pr36691.c \
	pr36765.c \
	pr37102.c \
	pr37125.c \
	pr37573.c \
	pr37780.c \
	pr37882.c \
	pr37924.c \
	pr37931.c \
	pr38048-1.c \
	pr38048-2.c \
	pr38051.c \
	pr38151.c \
	pr38212.c \
	pr38236.c \
	pr38422.c \
	pr38533.c \
	pr38819.c \
	pr39100.c \
	pr39120.c \
	pr39228.c \
	pr39233.c \
	pr39240.c \
	pr39339.c \
	pr39501.c \
	pr40022.c \
	pr40057.c \
	pr40386.c \
	pr40493.c \
	pr40579.c \
	pr40657.c \
	pr40747.c \
	pr41239.c \
	pr41317.c \
	pr41395-1.c \
	pr41395-2.c \
	pr41750.c \
	pr41917.c \
	pr41919.c \
	pr41935.c \
	pr42006.c \
	pr42142.c \
	pr42154.c \
	pr42231.c \
	pr42248.c \
	pr42269-2.c \
	pr42512.c \
	pr42544.c \
	pr42570.c \
	pr42614.c \
	pr42691.c \
	pr42721.c \
	pr42833.c \
	pr43008.c \
	pr43220.c \
	pr43236.c \
	pr43269.c \
	pr43385.c \
	pr43438.c \
	pr43560.c \
	pr43629.c \
	pr43783.c \
	pr43784.c \
	pr43835.c \
	pr43987.c \
	pr44164.c \
	pr44202-1.c \
	pr44555.c \
	pr44683.c \
	pr44828.c \
	pr44852.c \
	pr44858.c \
	pr45034.c \
	pr45070.c \
	pr45262.c \
	pr45695.c \
	pr46019.c \
	pr46309.c \
	pr46316.c \
	pr46909-1.c \
	pr46909-2.c \
	pr47148.c \
	pr47155.c \
	pr47237.c \
	pr47299.c \
	pr47337.c \
	pr47538.c \
	pr47925.c \
	pr48197.c \
	pr48571-1.c \
	pr48717.c \
	pr48809.c \
	pr48814-1.c \
	pr48814-2.c \
	pr48973-1.c \
	pr48973-2.c \
	pr49039.c \
	pr49073.c \
	pr49123.c \
	pr49161.c \
	pr49186.c \
	pr49279.c \
	pr49281.c \
	pr49390.c \
	pr49419.c \
	pr49644.c \
	pr49712.c \
	pr49768.c \
	pr49886.c \
	pr50865.c \
	pr51023.c \
	pr51323.c \
	pr51466.c \
	pr51877.c \
	pr52129.c \
	pr52209.c \
	pr52760.c \
	pr52979-1.c \
	pr52979-2.c \
	pr53084.c \
	pr53160.c \
	pr53465.c \
	pr53688.c \
	pr54937.c \
	pr54985.c \
	pr55137.c \
	pr55750.c \
	pr55875.c \
	pr56250.c \
	pr56837.c \
	pr56962.c \
	pr57124.c \
	pr57130.c \
	pr57131.c \
	pr57144.c \
	pr57281.c \
	pr57321.c \
	pr57344-3.c \
	pr57344-4.c \
	pr57568.c \
	pr57829.c \
	pr57860.c \
	pr57861.c \
	pr57875.c \
	pr57876.c \
	pr57877.c \
	pr58209.c \
	pr58277-1.c \
	pr58277-2.c \
	pr58364.c \
	pr58365.c \
	pr58385.c \
	pr58387.c \
	pr58419.c \
	pr58431.c \
	pr58564.c \
	pr58570.c \
	pr58640-2.c \
	pr58640.c \
	pr58662.c \
	pr58726.c \
	pr58943.c \
	pr58984.c \
	pr59014-2.c \
	pr59014.c \
	pr59101.c \
	pr59221.c \
	pr59229.c \
	pr59358.c \
	pr59387.c \
	pr59388.c \
	pr59413.c \
	pr59643.c \
	pr59747.c \
	pr60003.c \
	pr60017.c \
	pr60062.c \
	pr60072.c \
	pr60822.c \
	pr61306-3.c \
	pr61517.c \
	pr61673.c \
	pr61682.c \
	pr61725.c \
	pr62151.c \
	pr63209.c \
	pr63641.c \
	pr63659.c \
	pr63843.c \
	pr64006.c \
	pr64255.c \
	pr64260.c \
	pr64682.c \
	pr64718.c \
	pr64756.c \
	pr64957.c \
	pr65053-1.c \
	pr65053-2.c \
	pr65215-1.c \
	pr65215-2.c \
	pr65215-3.c \
	pr65215-4.c \
	pr65215-5.c \
	pr65216.c \
	pr65418-1.c \
	pr65418-2.c \
	pr65648.c \
	pr65956.c \
	pr66187.c \
	pr66233.c \
	pr66556.c \
	pr66757.c \
	pr66940.c \
	pr67037.c \
	pr67226.c \
	pr67714.c \
	pr67929_1.c \
	pr68185.c \
	pr68249.c \
	pr68250.c \
	pr68321.c \
	pr68328.c \
	pr68376-1.c \
	pr68376-2.c \
	pr68381.c \
	pr68390.c \
	pr68506.c \
	pr68624.c \
	pr68648.c \
	pr68841.c \
	pr68911.c \
	pr69097-1.c \
	pr69097-2.c \
	pr69403.c \
	pr69447.c \
	pr69691.c \
	pr70005.c \
	pr70127.c \
	pr70429.c \
	pr70460.c \
	pr70586.c \
	pr70602.c \
	pr71083.c \
	pr71335.c \
	pr71494.c \
	pr71550.c \
	pr71554.c \
	pr71631.c \
	pr71700.c \
	pr7284-1.c \
	pr77718.c \
	pr77766.c \
	pr77767.c \
	pr78170.c \
	pr78378.c \
	pr78436.c \
	pr78438.c \
	pr78477.c \
	pr78559.c \
	pr78586.c \
	pr78617.c \
	pr78622.c \
	pr78675.c \
	pr78720.c \
	pr78726.c \
	pr78791.c \
	pr78856.c \
	pr79043.c \
	pr79286.c \
	pr79327.c \
	pr79354.c \
	pr79388.c \
	pr79450.c \
	pr80153.c \
	pr80501.c \
	pr81423.c \
	pr81555.c \
	pr81556.c \
	pr81588.c \
	pr81913.c \
	pta-field-1.c \
	pta-field-2.c \
	ptr-arith-1.c \
	pushpop_macro.c \
	regstack-1.c \
	restrict-1.c \
	scope-1.c \
	shiftdi.c \
	strcpy-2.c \
	strct-pack-1.c \
	strct-pack-2.c \
	strct-pack-3.c \
	strct-pack-4.c \
	string-opt-17.c \
	string-opt-18.c \
	string-opt-5.c \
	struct-aliasing-1.c \
	struct-cpy-1.c \
	struct-ini-1.c \
	struct-ini-2.c \
	struct-ini-3.c \
	struct-ret-2.c \
	switch-1.c \
	tstdi-1.c \
	unroll-1.c \
	usmul.c \
	vrp-1.c \
	vrp-2.c \
	vrp-3.c \
	vrp-4.c \
	vrp-5.c \
	vrp-7.c \
	wchar_t-1.c \
	zerolen-1.c \
	zerolen-2.c \
	zero-struct-1.c \
	zero-struct-2.c
